# learn-modern-cpp-kafka

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
